css fix for when mod column is too short

--- a/mod-picker/app/assets/stylesheets/pages/showMod.scss
+++ b/mod-picker/app/assets/stylesheets/pages/showMod.scss
@@ -150,6 +150,7 @@
 .left-mod-column {
   padding-right: 20px;
   font-size: 14px;
+  height: calc(100vh - 542px);
 
   .section-title {
     font-size: 16px;
